--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=feed
+spring.cloud.azure.cosmos.enabled=true
+spring.cloud.azure.cosmos.database=finscope
+spring.cloud.azure.cosmos.endpoint=https://finscope.documents.azure.com:443/
+spring.cloud.azure.cosmos.key=<replace me with database key>
