--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.application.name=feed
 spring.cloud.azure.cosmos.enabled=true
 spring.cloud.azure.cosmos.database=finscope
 spring.cloud.azure.cosmos.endpoint=https://finscope.documents.azure.com:443/
-spring.cloud.azure.cosmos.key=<replace me with database key>
+spring.cloud.azure.cosmos.key=<replace with db key>
